updated linkedIn url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Middle Child</li>
             <li>Loves Music</li>            
         </ul>
-        <p>Please connect with me on <a href="www.linkedin.com/in/gillian-kenyani-11b906150" target="blank">LinkedIn here</a></p>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/gillian-kenyani-11b906150/" target="blank">LinkedIn here</a></p>
         <input type="text" placeholder="Enter Email..">
         <button>Join Newsletter</button>
     </body>
